# minimal-ai

./: .flake8  .gitignore  .pylintrc  README.md  alembic.ini  metadata.xlsx  pyproject.toml
db_migrations/versions/: bb829d2b3b61_creating_initial_table.py
minimal-ui/: index.html  package-lock.json  package.json
minimal-ui-v2/: package-lock.json  package.json
minimal-ui-v2/src/: App.jsx  main.jsx  routes.jsx
minimal-ui-v2/src.bak/: routes.jsx
minimal-ui-v2/src.bak/api/: api.js
minimal-ui-v2/src.bak/assets/css/: index.css
minimal-ui-v2/src.bak/component/: MainHeader.jsx  MainSider.jsx
minimal-ui-v2/src.bak/component/Dashboard/: PipelineMetricsCard.jsx
minimal-ui-v2/src.bak/component/PipelineList/: PipelineInfoTable.jsx
minimal-ui-v2/src.bak/layout/dashboard/: index.jsx
minimal-ui-v2/src.bak/layout/home/: index.jsx
minimal-ui-v2/src.bak/layout/pipelineList/: index.jsx
minimal-ui-v2/src.bak/layout/workbook/: index.jsx
minimal-ui-v2/src/api/: api.js
minimal-ui-v2/src/appState/: taskStore.js
minimal-ui-v2/src/assets/css/: index.css
minimal-ui-v2/src/component/: MainHeader.jsx  MainSider.jsx  WorkbookSider.jsx
minimal-ui-v2/src/component/Dashboard/: PipelineMetricsCard.jsx  PipelineMetricsChart.jsx
minimal-ui-v2/src/layout/home/: index.jsx
minimal-ui-v2/src/utils/: formatNumber.js  formatString.js
minimal-ui/src/: App.jsx  main.jsx  routes.jsx
minimal-ui/src/api/: api.js
minimal-ui/src/appState/: pipelineStore.js
minimal-ui/src/components/: AccountPopover.jsx  Logo.jsx  MenuPopover.jsx  NotificationsPopover.jsx  Page.jsx  PipelineDetails.jsx  ScrollToTop.jsx  Scrollbar.jsx  SearchNotFound.jsx  TaskDataTable.jsx  appMenu.jsx
minimal-ui/src/mock/: PIPELINE_DATA.json
minimal-ui/src/sections/: AppWidgetSummary.jsx  TaskListHead.jsx  TaskListToolbar.jsx  TaskMoreMenu.jsx  TasksTable.jsx
minimal-ui/src/theme/: index.jsx  palette.js  shadows.js  typography.js
minimal-ui/src/utils/: formatString.js  formatTime.js  ui.util.js
minimalAiDb_migrations/versions/: bf215e894961_create_pipeline_table.py
minimal_ai/: run_app.py  run_server.py
minimal_ai/app/api/: api_config.py  db.py  endpoints.py
minimal_ai/app/app_logger/: logger.py
minimal_ai/app/connections/: __init__.py  sql_base.py
minimal_ai/app/entity/: BaseEntity.py  PipelineExecutionEntity.py  PipelineSchedulerEntity.py  __init__.py
minimal_ai/app/models/: __init__.py  pipeline.py  pipeline_execution.py  scheduler.py  tables.py  task.bak.py  task.py  variable.py
minimal_ai/app/pipeline_templates/: main.jinja  utils.py
minimal_ai/app/services/: __init__.py  db_service.py  file_service.py  minimal_exception.py  pipeline_scheduler.py  pipeline_service.py  spark_main.py  task_service.py
minimal_ai/app/utils/: __init__.py  constants.py  dictionary.py  excel_to_json.py  spark_utils.py  string_utils.py
minimal_ai/static/: index.html
minimal_ai/static/assets/: index-1a0ddf28.css  index-755192f9.js  index-774a0cf6.js  index-893a772f.css
sample_data/: bankloan1.csv  bankloan2.csv  metadata.json  metadata.xlsx
(+81 files in other folders)
