[tool.poetry]
name = "minimal-ai"
version = "0.1.0"
description = ""
authors = ["kumar umang <umang.kumar@clairvoyantsoft.com>"]
readme = "README.md"
packages = [{include = "minimal_ai"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.99.1"
uvicorn = "^0.20.0"
aiofiles = "^23.1.0"
pylint = "^2.16.2"
sqlalchemy = "^2.0.4"
mysql-connector-python = "^8.0.32"
python-multipart = "^0.0.5"
pytest = "^7.3.1"
httpx = "^0.24.1"
apscheduler = "^3.10.1"
polars = "^0.18.5"
pyarrow = "^12.0.1"
openpyxl = "^3.1.2"
xlsx2csv = "^0.8.1"
typer = {extras = ["all"], version = "^0.9.0"}
pyspark = "^3.4.1"
pandas = "^2.0.3"
pyspark-ai = "^0.1.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
minimal-ai = "minimal_ai.run_app:app"