[tool.poetry]
name = "minimal-ai"
version = "0.1.0"
description = ""
authors = ["kumar umang <umang.kumar@clairvoyantsoft.com>"]
readme = "README.md"
packages = [{include = "minimal_ai"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.103.0"}
pylint = "^2.17.5"
sqlalchemy = "^2.0.20"
mysql-connector-python = "^8.1.0"
pytest = "^7.4.0"
apscheduler = "^3.10.4"
polars = "^0.18.15"
pandas = "^2.0.3"
pyarrow = "^13.0.0"
openpyxl = "^3.1.2"
xlsx2csv = "^0.8.1"
typer = {extras = ["all"], version = "^0.9.0"}
pyspark = "^3.4.1"
google-cloud-storage = "^2.10.0"
google-cloud-bigquery = "^3.11.4"
alembic = "^1.12.0"
aiosqlite = "^0.19.0"
greenlet = "^2.0.2"
aiofiles = "^23.2.1"
langchain = "^0.0.283"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
minimal-ai = "minimal_ai.run_app:app"