[tool.poetry]
name = "minimal-ai"
version = "0.1.0"
description = ""
authors = ["kumar umang <umang.kumar@clairvoyantsoft.com>"]
readme = "README.md"
packages = [{include = "minimal_ai"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.103.0"}
sqlalchemy = "^2.0.20"
mysql-connector-python = "^8.1.0"
pytest = "^7.4.0"
apscheduler = "^3.10.4"
polars = "^0.18.15"
pandas = "^2.0.3"
pyarrow = "^13.0.0"
openpyxl = "^3.1.2"
xlsx2csv = "^0.8.1"
typer = {extras = ["all"], version = "^0.9.0"}
pyspark = "^3.4.1"
google-cloud-storage = "^2.10.0"
google-cloud-bigquery = "^3.11.4"
alembic = "^1.12.0"
aiosqlite = "^0.19.0"
greenlet = "^2.0.2"
aiofiles = "^23.2.1"
langchain = "^0.0.283"
psutil = "^5.9.5"
loguru = "^0.7.2"
jinja2 = "^3.1.2"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"


[tool.poetry.group.httpx.dependencies]
pytest = "^7.4.2"

[[tool.poetry.source]]
name = "pypiorg"
url = "https://pypi.org/simple/"
priority = "default"


[[tool.poetry.source]]
name = "files"
url = "https://files.pythonhosted.org/"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
minimal-ai = "minimal_ai.run_app:app"